crates/cairo-lang-parser/src/parser_test_data/diagnostics/illegal_string_escapes
//! > Illegally escaped short string.

//! > test_runner_name
get_diagnostics

//! > cairo_code
fn foo() {
    let a = '\p';
}

//! > expected_diagnostics
error[E0007]: Invalid string escaping.
 --> dummy_file.cairo:2:13
    let a = '\p';
            ^**^

//! > ==========================================================================

//! > Short string containing unicode characters.

//! > test_runner_name
get_diagnostics

//! > cairo_code
fn foo() {
    let a = '\u{1024}';
}

//! > expected_diagnostics
error[E0008]: Short string literals can only include ASCII characters.
 --> dummy_file.cairo:2:13
    let a = '\u{1024}';
            ^********^

//! > ==========================================================================

//! > String containing unicode characters.

//! > test_runner_name
get_diagnostics

//! > cairo_code
fn foo() {
    let a = "\u{1024}";
}

//! > expected_diagnostics
error[E0008]: String literals can only include ASCII characters.
 --> dummy_file.cairo:2:13
    let a = "\u{1024}";
            ^********^
